bk_ida/gccida/g1/decode_rtx_const
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decode_rtx_const/src/varasm.c:4006:25: error: must use 'enum' tag to refer to type 'machine_mode'
void  decode_rtx_const( machine_mode mode, rtx x,  struct rtx_const *value) 
                        ^
                        enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decode_rtx_const/src/varasm.c:4010:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v5; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decode_rtx_const/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decode_rtx_const/src/varasm.c:4037:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
value->un.du.d.r[2] = ( __int64)x[2]; 
                                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decode_rtx_const/src/varasm.c:4041:33: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
value->un.du.d.r[1] = ( __int64)x[1]; 
                                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decode_rtx_const/src/varasm.c:4050:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decode_rtx_const/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decode_rtx_const/src/varasm.c:4068:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/decode_rtx_const/src/obj/varasm.o] Error 1
